@@ -47,37 +47,33 @@ ifdef(`HAVE_ABI_mode32',`
 	rldicl	n, n, 0,32		C FIXME: avoid this zero extend
 ')
 	mflr	r12
-	bcl	20, 31, L(r)		C get pc using a local "call"
-L(r):	mflr	r11
-	addi	r11, r11, L(e1)-L(r)-64	C address of L(e1) label in SHIFT(1)
+	LEAL(	r11, L(e1))		C address of L(e1) label in SHIFT(1)
 	sldi	r10, cnt, 6		C multiply cnt by size of a SHIFT block
 	add	r11, r11, r10		C address of L(oN) for N = cnt
+	srdi	r10, n, 1
 	mr	rp, rp_param
 	subfic	tnc, cnt, 64
-	rlwinm.  r8, n, 0,31,31		C extract bit 0
+	rlwinm.	r8, n, 0,31,31		C extract bit 0
+	mtctr	r10
 	beq	L(evn)
 
 L(odd):	ld	r9, 0(up)
 	cmpdi	cr0, n, 1		C n = 1?
 	beq	L(1)
 	ld	r8, 8(up)
-	addi	r11, r11, L(o1)-L(e1)
+	addi	r11, r11, -84		C L(o1) - L(e1) - 64
 	mtlr	r11
-	srdi	r11, n, 1
 	sld	r3, r9, tnc		C retval
 	addi	up, up, 8
 	addi	rp, rp, 8
-	mtctr	r11
 	blr				C branch to L(oN)
 
 L(evn):	ld	r8, 0(up)
 	ld	r9, 8(up)
+	addi	r11, r11, -64
 	mtlr	r11
-	addi	n, n, 1
-	srdi	r10, n, 1
 	sld	r3, r8, tnc		C retval
 	addi	up, up, 16
-	mtctr	r10
 	blr				C branch to L(eN)
 
 L(1):	sld	r3, r9, tnc		C retval
@@ -121,3 +117,4 @@ ifdef(`HAVE_ABI_mode32',
 ')
 	blr
 EPILOGUE()
+ASM_END()
